feat: add admin platform foundation